--- a/src/app/components/home/pages/contenido-publicaciones/contenido-publicaciones.component.html
+++ b/src/app/components/home/pages/contenido-publicaciones/contenido-publicaciones.component.html
@@ -1,43 +1,80 @@
-<div class="text-center container py-2">
-  <h1>Titulo</h1>
+<div style="overflow-y: scroll; height: 100%">
+  @if (publicacion) {
+  <div class="text-center container py-2">
+    <h1>{{ publicacion.titulo }}</h1>
 
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloribus
-    modi doloremque. Nisi porro necessitatibus omnis placeat illo rerum ipsum
-    architecto sequi ipsam rem ullam suscipit veniam, natus non dignissimos!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-    voluptatum sit dolor nesciunt accusantium pariatur iste dignissimos
-    perspiciatis placeat. Nesciunt repellat quia maiores, aliquam ullam delectus
-    quidem sit nisi dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-    elit. Dignissimos architecto culpa, quae optio quod odio dolores eveniet
-    mollitia maxime! Repellat ab aspernatur molestiae nesciunt harum veniam quos
-    nisi odio minima?
-  </p>
-  <img
-    src="https://cdn-icons-png.flaticon.com/512/468/468833.png"
-    class="img-fluid"
-    width="260px"
-  />
-</div>
-
-<div class="container">
-  <button class="btn btn-primary">Cargar Comentarios</button>
-  <p>180 Comentarios</p>
-  <div class="d-flex align-items-start">
+    <p>
+      {{ publicacion.contenido }}
+    </p>
     <img
-      src="https://st3.depositphotos.com/3538469/15750/i/450/depositphotos_157501024-stock-photo-business-man-icon.jpg"
-      class="img-fluid rounded-3 me-2"
-      width="45px"
+      src="https://cdn-icons-png.flaticon.com/512/468/468833.png"
+      class="img-fluid"
+      width="260px"
     />
-    <div>
-      <p class="m-0 text-primary fw-bold">Nombre usuario</p>
-      <span>Hace 7 horas</span>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis,
-        excepturi, nobis alias totam obcaecati molestias natus nostrum pariatur
-        magni odio laboriosam beatae dolorum asperiores rerum officiis veniam
-        molestiae maxime fugit.
-      </p>
+  </div>
+
+  <div class="container">
+    <button
+      class="btn btn-primary"
+      (click)="clickCargarComentarios(publicacion.publicacion_id || 0)"
+    >
+      Cargar Comentarios
+    </button>
+    <p>{{ publicacion.c_comentario }} Comentarios</p>
+
+    <div [ngClass]="{ 'd-none': boolContenido }">
+      <form
+        [formGroup]="form"
+        (ngSubmit)="submit(publicacion.publicacion_id || 0)"
+      >
+        <textarea
+          id="contenido"
+          class="form-control mb-2"
+          formControlName="contenido"
+          rows="1"
+          style="overflow: hidden"
+          oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px'"
+        ></textarea>
+        <button class="btn btn-primary mb-3">Enviar</button>
+      </form>
+      @if (comentarios) { @for (comentario of comentarios; track
+      comentario.comentario_id) {
+      <div class="d-flex align-items-start mb-2">
+        <!-- avatar -->
+        <div
+          style="
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            margin-right: 10px;
+            margin-top: 10px;
+          "
+        >
+          <img src="{{ comentario.usuario?.avatar }}" height="40px" />
+        </div>
+        <!-- contenido -->
+        <div class="d-flex flex-column align-items- w-75">
+          <div>
+            <p class="fw-bold m-0 d-inline">{{ comentario.usuario?.nombre }}</p>
+            <span style="font-size: 13px; color: #474646">{{
+              comentario.createdAt || "" | dateFormat
+            }}</span>
+          </div>
+
+          <p style="word-wrap: break-word">
+            {{ comentario.contenido }}
+          </p>
+        </div>
+      </div>
+
+      } }
     </div>
   </div>
+
+  }
 </div>
