--- a/src/app/components/home/pages/navigation-publicaciones/navigation-publicaciones.component.html
+++ b/src/app/components/home/pages/navigation-publicaciones/navigation-publicaciones.component.html
@@ -1,10 +1,34 @@
+<!-- <a class="btn btn-primary w-50" (click)="getPublicaciones()">Todos</a>
 <a class="btn btn-primary w-50" (click)="createPublicacion()"
   >Crear Publicacion</a
 >
-<button class="btn btn-info w-50">Ver mis Publicacion</button>
+<button class="btn btn-info w-50" (click)="getPublicacionesUsuario()">
+  Ver mis Publicacion
+</button> -->
+<nav>
+  <ul class="m-0 pagination">
+    <li class="page-item" style="width: 30%">
+      <a class="page-link" (click)="createPublicacion()">Crear</a>
+    </li>
+    <li class="page-item" style="width: 40%">
+      <a class="page-link" (click)="getPublicaciones()">Todas</a>
+    </li>
+    <li class="page-item" style="width: 30%">
+      <a class="page-link" (click)="getPublicacionesUsuario()">Mias</a>
+    </li>
+  </ul>
+</nav>
+<form [formGroup]="form">
+  <input
+    type="text"
+    class="form-control"
+    formControlName="titulo"
+    (input)="getPublicaciones()"
+  />
+</form>
 
 @if (likes) {
-<div class="overflow-auto" style="height: 84%">
+<div class="overflow-auto" style="height: 79.9%">
   @for (publicacion of publicaciones; track publicacion.publicacion_id ) {
   <div
     class="card rounded-0"
